Fixed ratings box vertical alignment on desktop

--- a/wine/static/wine/findwine.scss
+++ b/wine/static/wine/findwine.scss
@@ -84,6 +84,27 @@ body {
     padding-left: 0px;
     padding-right: 0px;
   }
+
+  @include breakpoint(sm) {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+  }
+
+  @include breakpoint(lg) {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+    max-width: 100%;
+  }
+
+  @include breakpoint(xl) {
+    width: 1140px;
+  }
 }
 
 .navbar {
@@ -190,7 +211,7 @@ a:focus, a:hover {
 
 a {
   .findwine_producer-link {
-    color: $primary-green;
+    color: $light-grey-text;
     &:hover{
       color: $hover-green;
     }
@@ -1915,7 +1936,6 @@ button:focus, button:hover {
     font-size: 12px;
     line-height: 22px;
     text-align: center;
-    display: inline-block;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1923,9 +1943,10 @@ button:focus, button:hover {
     @include breakpoint(lg) {
       font-size: 16px;
       border-radius: 3px;
-      margin-top: 5px;
+      margin-top: -17px;
       height: 40px;
       width: 40px;
+      align-self: center;
     }
   }
 
